[package]
name = "dungeon-cruller"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_rapier2d = { version = "0.24.0", features = ["simd-stable"] }
bevy = { version = "0.12.1", features = ["dynamic_linking", "file_watcher"] }
styles = { path = "../styles" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
